# my-ez-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_HUB.md  LICENSE  README.md  ROADMAP.md  SETUP.md  setup.sh
.claude/: settings.json
.claude/memory/: MEMORY.md  feedback_always_write_tests.md  feedback_commit_strategy.md  feedback_custom_image_standards.md  feedback_dont_trust_reviewer_date_corrections.md  feedback_gh_tracking.md  feedback_git_push_explicit_branch.md  feedback_language_standard.md  feedback_python3_dependency.md  feedback_release_grouping.md  feedback_skill_naming.md  feedback_smoke_test_before_commit.md  feedback_test_before_commit.md  feedback_validate_against_standards.md  feedback_verify_external_corrections.md  project_branching_strategy.md  project_dockerhub_naming.md  project_tools_multicategory.md
.claude/rules/: code-standards.md  git-workflow.md  preferences.md  python-standards.md  security.md  shell-standards.md
.claude/skills/add-mec-tool/: SKILL.md
.claude/skills/claudemd-streamline/: SKILL.md
.claude/skills/memory-migration/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  docker-build-ai-service.yml  docker-build-all.yml  docker-build-aws-sso-cred.yml  docker-build-cdktf.yml  docker-build-claude.yml  docker-build-config-service.yml  docker-build-dashboard.yml  docker-build-playwright.yml  docker-build-serverless.yml  docker-build-speedtest.yml  docker-build-yarn-berry.yml  docker-build-yarn-plus.yml  hadolint.yml  scorecard.yml  security-scan.yml  shellcheck.yml  test.yml
config/: config.default.yaml  images.conf
config/aws/: .env.example  README.md
docker/ai-service/: Dockerfile  README.md  build
docker/aws-sso-cred/: Dockerfile  README.md  build
docker/cdktf/python/: Dockerfile  README.md  build
docker/claude/: .gitignore  Dockerfile  README.md  build  entrypoint.sh  init-firewall.sh  resolve-domains.sh
docker/config-service/: Dockerfile  build
docker/dashboard/: Dockerfile  Dockerfile.test  build
docker/playwright/: Dockerfile  README.md  build
docker/poetry/: README.md  build
docker/serverless/: Dockerfile  README.md  build
docker/speedtest/: Dockerfile  README.md  build
docker/yarn-berry/: Dockerfile  README.md  build  package.json
docker/yarn-plus/: Dockerfile  README.md  build
docs/: AI_INTEGRATION.md  CODE_STANDARDS.md  CONFIGURATION.md  CONTAINER_REGISTRY.md  DOCKER_HUB.md  LOG_FORMAT.md  ROADMAP.md  SETUP.md
docs/superpowers/plans/: 2026-03-30-dashboard-retroactive-ai.md
libexec/: saml-extract-roles.py
services/ai/: .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
services/ai/src/: claude_response.py  exceptions.py  main.py  types.py
services/ai/src/filters/: __init__.py  engine.py
services/ai/src/utils/: config.py  logger.py
services/ai/tests/: test_claude_response.py  test_filter_engine.py
services/config/: pyproject.toml
services/config/src/: __init__.py  exceptions.py  main.py  types.py  yaml_manager.py
services/config/tests/: __init__.py  test_yaml_manager.py
services/dashboard/: README.md  pyproject.toml
services/dashboard/frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
services/dashboard/frontend/src/: App.vue  main.js  vitest.setup.js
services/dashboard/frontend/src/assets/: main.css
services/dashboard/frontend/src/components/: AIStatus.vue  AiOutput.test.js  AiOutput.vue  LogOutput.vue  LogsStatus.vue  NavBar.vue  SessionTable.test.js  SessionTable.vue  WsStatus.vue
services/dashboard/frontend/src/composables/: useSessions.js  useSessions.test.js  useWebSocket.js  useWebSocket.test.js
services/dashboard/frontend/src/pages/: HomePage.vue  SessionDetailPage.test.js  SessionDetailPage.vue  SessionsPage.vue  ToolsPage.vue
services/dashboard/frontend/src/router/: index.js
services/dashboard/frontend/tests/e2e/: dashboard.spec.js
services/dashboard/src/: main.py  sessions.py  watcher.py
services/dashboard/src/api/: sessions.py  stats.py  ws.py
services/dashboard/src/static/: index.html  session.html
services/dashboard/tests/: test_api_analyze.py  test_sessions.py  test_stats.py
src/: README.md
src/api/: README.md
src/cli/: README.md
src/web-ui/: README.md
tests/: README.md  check-dependencies.sh  run-all-tests.sh  setup-test-env.sh
tests/integration/: test-dashboard.bats  test-node-port-binding.bats  test-symlink-execution.bats
tests/unit/: test-aws-saml-okta.bats  test-aws.bats  test-claude.bats  test-common-utils.bats  test-config-manager.bats  test-dashboard.bats  test-doctor.bats  test-gcloud.bats  test-log-manager.bats  test-node.bats  test-npm.bats  test-npx.bats  test-playwright.bats  test-purge.bats  test-python.bats  test-setup.bats  test-terraform.bats  test-tools.bats  test-yarn.bats
