[tool.poetry]
name = "my-ez-cli-ai-service"
version = "1.0.0-rc"
description = "AI service for My Ez CLI - error analysis and intelligent suggestions"
authors = ["My Ez CLI Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.13"
mypy = "^1.19.1"
pre-commit = "^4.0.0"
types-pyyaml = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Target Python 3.12+
target-version = "py312"

# Line length to match project style
line-length = 100

# Source directory
src = ["src"]

# Exclude patterns
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "*.pyc",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable recommended rules + additional checks
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python idioms)
    "B",      # flake8-bugbear (likely bugs)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "PERF",   # perflint (performance anti-patterns)
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules that conflict with project style
ignore = [
    "E501",     # Line too long (handled by formatter)
    "PLR0913",  # Too many arguments (common in constructors)
    "PLR2004",  # Magic value comparison (too strict)
    "SIM108",   # Use ternary operator (readability preference)
    "RET505",   # Unnecessary else after return (sometimes clearer)
    "RET504",   # Unnecessary assignment before return (sometimes clearer)
    "ARG002",   # Unused method argument (required by interface)
    "PLR0912",  # Too many branches (common in analyzers)
    "PLR0915",  # Too many statements (common in analyzers)
]

[tool.ruff.lint.per-file-ignores]
# Test files can have additional flexibility
"tests/**/*.py" = [
    "ARG001",  # Unused function argument (fixtures)
    "S101",    # Use of assert (expected in tests)
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with 4 spaces
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Format docstrings
docstring-code-format = true

[tool.mypy]
# Strict mode for maximum type safety
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
no_implicit_optional = true
strict_equality = true
strict_concatenate = true

# Show error codes
show_error_codes = true
show_column_numbers = true
show_error_context = true

# Paths to check
files = ["src", "tests"]

# Exclude patterns
exclude = [
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = "tests.*"
# Allow untyped definitions in tests for flexibility
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-v",                    # Verbose output
    "--tb=short",            # Shorter traceback format
    "--strict-markers",      # Strict marker checking
    "--strict-config",       # Strict config checking
    "-ra",                   # Show summary of all test outcomes
]

# Markers for categorizing tests
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

# Coverage options (if using pytest-cov)
# [tool.coverage.run]
# source = ["src"]
# omit = ["tests/*", "**/__pycache__/*"]
