[tool.poetry]
name = "my-ez-cli-dashboard"
version = "1.0.0-rc"
description = "Dashboard service for My Ez CLI - log and AI analysis viewer"
authors = ["My Ez CLI Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.32,<0.46"}
watchfiles = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.0"
ruff = "^0.14.13"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RET", "PTH", "PL", "RUF"]
ignore = ["E501", "PLR0913", "PLR2004", "SIM108", "RET505", "RET504", "PLR0912", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short", "--strict-markers", "-ra"]
markers = ["unit: Unit tests", "integration: Integration tests"]
